--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -9,7 +11,7 @@
     </parent>
     <groupId>lu.esante.agence</groupId>
     <artifactId>epione</artifactId>
-    <version>1.6</version>
+    <version>2.2.0</version>
     <name>epione</name>
     <description>epione project</description>
     <properties>
@@ -232,7 +234,7 @@
                         </goals>
                         <configuration>
                             <inputSpec>
-                                ${project.basedir}/src/main/resources/api.yaml
+                                ${project.basedir}/src/main/resources/epione-v1.yaml
                             </inputSpec>
                             <generatorName>spring</generatorName>
                             <modelNameSuffix>Dto</modelNameSuffix>
@@ -274,8 +276,10 @@
                                 <directory>${basedir}/src/main/resources</directory>
                                 <!-- Defaults to schemaIncludes. -->
                                 <includes>
-                                    <include>xsd/MemoireHonoraire.xsd</include>
-                                    <include>xsd/Annulation_MemoireHonoraire_05.xsd</include>
+                                    <include>xsd/2022_CNS_MEMHON_DEPOT-REQ-V1.xsd</include>
+                                    <include>xsd/2022_CNS_MEMHON_DEPOT-RES-V1.xsd</include>
+                                    <include>xsd/2022_CNS_MEMHON_ANNUL-REQ-V3.xsd</include>
+                                    <include>xsd/2022_CNS_MEMHON_REMBCONS-REQ-V1.xsd</include>
                                 </includes>
                                 <!-- Defaults to schemaIncludes -->
                                 <excludes>
