--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.datasource.url=
+spring.datasource.url=jdbc:postgresql://localhost:5434/epione
 spring.datasource.username=
 spring.datasource.password=
-spring.jpa.properties.hibernate.dialect=
-spring.jpa.hibernate.ddl-auto=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.flyway.baseline-on-migrate=true
+# spring.flyway.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+# mysecu.webproxy.host=NONE
+# mysecu.webproxy.port=0
 mysecu.userid=
 mysecu.password=
 mysecu.keystore.password=
@@ -21,23 +25,20 @@ mpi.active=
 mpi.endpoint=
 mpi.ssnDomain=
 mpi.patientIdentifierDomain=
-logging.level.root=
-security.basic.enabled=
-management.security.enabled=
+logging.level.root=INFO
+security.basic.enabled=false
+management.security.enabled=false
 epione.oauth.audience=
 epione.oauth.issuer=
 epione.security.certificateHeaderName=
-epione.security.cnsEHealthIds=
-epione.security.adminEHealthIds=
 epione.security.certificateKey=
-epione.isMySecuActive=
-spring.jackson.default-property-inclusion=
-server.error.include-message=
-server.error.include-binding-errors=
-server.error.include-stacktrace=
-server.error.include-exception=
+# epione.send.document.delay.in.milliseconds=10000
+epione.isMySecuActive=false
+spring.jackson.default-property-inclusion=non_null
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
+server.error.include-exception=false
 spring.security.oauth2.resourceserver.jwt.issuer-uri=
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=
-epione.cnsFileDirectory=
-cns.extract.generate.delay=
-cns.stat.generate.delay=
+epione.send.document.delay.in.milliseconds=10000
